package com.example.siduraboda.screens;

import android.content.Intent;
import android.os.Bundle;
import android.view.View;
import android.widget.Button;

import androidx.activity.EdgeToEdge;
import androidx.appcompat.app.AppCompatActivity;
import androidx.core.graphics.Insets;
import androidx.core.view.ViewCompat;
import androidx.core.view.WindowInsetsCompat;

import com.example.siduraboda.R;
import com.example.siduraboda.models.Student;
import com.example.siduraboda.models.Teacher;
import com.example.siduraboda.utils.SharedPreferencesUtil;

public class LandingActivity extends AppCompatActivity {

    Teacher teacher;
    Student student;

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        EdgeToEdge.enable(this);
        setContentView(R.layout.activity_landing);
        ViewCompat.setOnApplyWindowInsetsListener(findViewById(R.id.main), (v, insets) -> {
            Insets systemBars = insets.getInsets(WindowInsetsCompat.Type.systemBars());
            v.setPadding(systemBars.left, systemBars.top, systemBars.right, systemBars.bottom);
            return insets;
        });
        //משתמשים נשארים מחוברים
        teacher = SharedPreferencesUtil.getTeacher(LandingActivity.this);
        if (SharedPreferencesUtil.isTeacherLoggedIn(LandingActivity.this)) {
            Intent intent = new Intent(LandingActivity.this, MainActivity.class);
            intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK | Intent.FLAG_ACTIVITY_CLEAR_TASK);
            startActivity(intent);
        }
        student = SharedPreferencesUtil.getStudent(LandingActivity.this);
        if (SharedPreferencesUtil.isStudentLoggedIn(LandingActivity.this)) {
            Intent intent = new Intent(LandingActivity.this, ImStudentActivity.class);
            intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK | Intent.FLAG_ACTIVITY_CLEAR_TASK);
            startActivity(intent);
        }

        Button button12 = findViewById(R.id.landingTOregister); //דף נחיתה להרשמה
        button12.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View v) {
                Intent intent = new Intent(LandingActivity.this, RegisterTeacherActivity.class);
                startActivity(intent);
            }
        }
        );

        Button button13 = findViewById(R.id.landingTOlogin); //דף נחיתה להתחברות
        button13.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View v) {
                Intent intent = new Intent(LandingActivity.this, LogInActivity.class);
                startActivity(intent);
            }
        }
        );
    }
}